# devoteam

./: .gitignore  README_INFERENCE_API.md  anomaly_tree_inference_api.py  antonius_fraud_detection.ipynb  pyproject.toml  requirements.txt
artifacts/: dt_inference_bundle.joblib
tests/: conftest.py  test_anomaly_inference_api.py
